fixup! styling changes to fix collapse caret animation, or a Tale of Two Specificities, or how specificity got the best of me

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -648,19 +648,25 @@
             display: none;
             opacity: 0.0;
           }
+        }
 
-          // STATE: is expanded
-          &.is-expanded {
+        // STATE: is expanded
+        &.is-expanded {
 
-            .ui-toggle-expansion {
-              @include transform(rotate(0));
-              @include transform-origin(50% 50%);
+          .ui-toggle-expansion {
+            @include rtl {
+              @include transform(rotate(-90deg));
             }
 
-            .wrapper-extended {
-              display: block;
-              opacity: 1.0;
+            @include ltr {
+              @include transform(rotate(90deg));
             }
+            @include transform-origin(50% 50%);
+          }
+
+          .wrapper-extended {
+            display: block;
+            opacity: 1.0;
           }
         }
 
@@ -676,19 +682,10 @@
 
             .ui-toggle-expansion {
               @include transition(all $tmg-f2 ease-in-out 0s);
-              @include transform-origin(50% 50%);
               @include font-size(18);
               display: inline-block;
               vertical-align: middle;
               margin-right: ($baseline/4);
-
-              @include rtl {
-                @include transform(rotate(90deg));
-              }
-
-              @include ltr {
-                @include transform(rotate(-90deg));
-              }
             }
 
             .message-copy {
